Melhorias no código
